--- a/app/views/monograph_catalog/_access_options.html.erb
+++ b/app/views/monograph_catalog/_access_options.html.erb
@@ -2,16 +2,17 @@
   <% if auth.actor_unauthorized? %>
     <% if auth.actor_authenticated? %>
       <div class="access access-options">
-        <span>
-          <%= @presenter.access_level(@actor_product_ids, @allow_read_product_ids).icon_lg.html_safe %> <b>Your institution does not have access to this book.</b> Please try <%= link_to "other options", main_app.monograph_authentication_path(@presenter.id, filter: true) %>.
-        <br />
-          Are you a librarian? See <%= link_to "purchase information", main_app.purchase_monograph_catalog_path(@presenter.id) %>.
-        </span>
+        <span><%= @presenter.access_level(@actor_product_ids, @allow_read_product_ids).icon_lg.html_safe %></span> 
+        <div>
+          <span><strong>Your institution does not have access to this book.</strong> Please try <%= link_to "other options", main_app.monograph_authentication_path(@presenter.id, filter: true) %>.</span>        
+          <br />
+          <span>Are you a librarian? See <%= link_to "purchase information", main_app.purchase_monograph_catalog_path(@presenter.id) %>.</span>
+        </div>
       </div>
     <% else %>
       <div class="access access-options access-options-alert">
-        <span><%= @presenter.access_level(@actor_product_ids, @allow_read_product_ids).icon_lg.html_safe %> You don't have access to this book. Please try to log in with your library.</span>
-        <span><%= link_to "Log in", main_app.monograph_authentication_path(@presenter.id)  %></span>
+        <span><%= @presenter.access_level(@actor_product_ids, @allow_read_product_ids).icon_lg.html_safe %> <strong>You don't have access to this book.</strong> Please try to log in with your library.</span>
+        <span><%= link_to "Log in", main_app.monograph_authentication_path(@presenter.id), class: "btn-sm btn"  %></span>
       </div>
     <% end %>
   <% else %>
