HELIO-4029 - adjust breadcrumb styling in prep for redesign and spacing; adjust modal message display, consistent wording

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -199,7 +199,7 @@ div.skip {
 ///////////////////////////////////
 .main-header {
   border-bottom: 0;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 .breadcrumbs {
@@ -207,6 +207,11 @@ div.skip {
   padding-bottom: 0 !important;
   .active {
     color: $gray-60 !important;
+  }
+
+  .breadcrumb {
+    background: none !important;
+    border: none !important;
   }
 
   .breadcrumb li + ::before {
