--- a/app/views/authentications/show.html.erb
+++ b/app/views/authentications/show.html.erb
@@ -113,7 +113,7 @@
     <div class="modal-dialog modal-sm vertical-align-center">
       <div class="modal-content">
         <div class="modal-body">
-          <p class="lead">This collection is using Single Sign-On for login, and <span id="name"></span> does not support this login method. You will need to access this collection on-campus or through your library's website.</p>
+          <p class="lead">This collection is using Single Sign-On for login, and <span id="name"></span> does not support this login method. <strong>You will need to access this collection on-campus or through your library's website.</strong></p>
           <p>Please contact your librarian if you have any questions about how to log in.</p>
           <button type="button" data-dismiss="modal" class="btn btn-default">Got it</button>
         </div>
