HELIO-4029 - minor adjustment to breadcrumb padding

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -212,6 +212,7 @@ div.skip {
   .breadcrumb {
     background: none !important;
     border: none !important;
+    padding: 8px 15px 8px 0px !important;
   }
 
   .breadcrumb li + ::before {
