--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -128,7 +128,7 @@
         var reader = cozy.reader('reader', {
           // See https://tools.lib.umich.edu/jira/browse/HELIO-3350 and https://stackoverflow.com/a/47331356
           // Hopefully this line can be removed eventually. Note these are the epub FileSet's NOIDs.
-          <% if %w[cc08hh07v x059c8342 t722h883s ws859h272 4t64gq185 3n204094k sx61dp14z 9019s4683 5138jh01s 2v23vw65x f7623f64k p2676x842 tb09j832f].include? @presenter.id %>...(bowser.safari && Math.floor(bowser.version) === 13 ? {flow: 'scrolled-doc'} : {}),<% end %>
+          <% if %w[cc08hh07v x059c8342 t722h883s ws859h272 4t64gq185 3n204094k sx61dp14z 9019s4683 5138jh01s 2v23vw65x f7623f64k p2676x842 tb09j832f 2v23vw87z].include? @presenter.id %>...(bowser.safari && Math.floor(bowser.version) === 13 ? {flow: 'scrolled-doc'} : {}),<% end %>
           href: "<%= "#{main_app.epub_url.gsub!(/\?.*/, '')}/" %>",
           skipLink: '.skip',
           download_links: <%= @ebook_download_presenter.csb_download_links.to_json.html_safe %>,
