Resolves HELIO-4094 and HELIO-4095 Add Searches_Platform metric and Institution ROR

--- a/app/views/counter_reports/without_customer_id/index.html.erb
+++ b/app/views/counter_reports/without_customer_id/index.html.erb
@@ -3,24 +3,37 @@
 <% end %>
 
 <h1>COUNTER 5 Reports</h1>
-
+<p>Add some help text after the header COUNTER 5 Reports. (Text to be supplied by Vecellio, Emma).</p>
+<div class="col-md-12"><hr/></div>
 <h2>Platform Master Report (PR)</h2>
 <%= render 'counter_reports/without_customer_id/master_view/form', report_id: 'pr' %>
+<div class="col-md-12"><hr/></div>
 <h2>Platform Usage (PR_P1)</h2>
 <%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'pr_p1' %>
+<div class="col-md-12"><hr/></div>
+<div class="col-md-12"><hr/></div>
 <h2>Title Master Report (TR)</h2>
 <%= render 'counter_reports/without_customer_id/master_view/form', report_id: 'tr' %>
+<div class="col-md-12"><hr/></div>
 <h2>Book Requests (Excluding OA_Gold) (TR_B1)</h2>
 <%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'tr_b1' %>
+<div class="col-md-12"><hr/></div>
 <h2>Access Denied by Book (TR_B2)</h2>
 <%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'tr_b2' %>
+<div class="col-md-12"><hr/></div>
 <h2>Book Usage by Access Type (TR_B3)</h2>
 <%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'tr_b3' %>
+<div class="col-md-12"><hr/></div>
+<div class="col-md-12"><hr/></div>
 <h2>Item Master Report (IR)</h2>
 <%= render 'counter_reports/without_customer_id/master_view/form', report_id: 'ir' %>
+<div class="col-md-12"><hr/></div>
 <h2>Multimedia Item Requests (IR_M1)</h2>
 <%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'ir_m1' %>
-
+<div class="col-md-12"><hr/></div>
+<div class="col-md-12"><hr/></div>
 <h1>COUNTER 4 Report</h1>
 <h2>Book Report 2 (R2): Number of Successful Section Requests by Month and Title</h2>
 <%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'counter4_br2' %>
+<div class="col-md-12"><hr/></div>
+
