--- a/app/views/counter_reports/without_customer_id/show.html.erb
+++ b/app/views/counter_reports/without_customer_id/show.html.erb
@@ -1,4 +1,7 @@
-<% columns = @report[:items][0].length %>
+<%
+  columns = 0
+  columns = @report[:items][0].length if @report[:items].present?
+%>
 
 <h1><%= @title %></h1>
 
@@ -11,24 +14,32 @@
         <td>&nbsp;</td>
       <% end %>
     </tr>
+  <% end %>
+  <tr>
+    <!--  Blank Line-->
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <% 1.upto(columns - 2).each do |x| %>
+      <td>&nbsp;</td>
     <% end %>
+  </tr>
+</table>
+<table class="table">
+  <% if columns.zero? %>
     <tr>
-      <% 1.upto(columns).each do |x| %>
-        <td>&nbsp;</td>
-      <% end %>
+      <td><b>Report is empty</b></td>
+      <td>&nbsp;</td>
     </tr>
+  <% else %>
     <tr>
-    <% if columns.zero? %>
-      <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-      <td><b>Report is empty</b></td><td>&nbsp;</td>
-    <% else %>
       <% @report[:items][0].each do |k, _v| %>
         <td><b><%= k %></b></td>
       <% end %>
-      <% @report[:items].each do |item| %>
+    </tr>
+    <% @report[:items].each do |item| %>
       <tr>
         <% item.each do |_k, v| %>
-        <td><%= v %></td>
+          <td><%= v %></td>
         <% end %>
       </tr>
     <% end %>
