Resolves HELIO-4111 Master Report Changes"

--- a/app/views/counter_reports/without_customer_id/index.html.erb
+++ b/app/views/counter_reports/without_customer_id/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <h1>COUNTER 5 Reports</h1>
-<p>Add some help text after the header COUNTER 5 Reports. (Text to be supplied by Vecellio, Emma).</p>
+<p>For more information about COUNTER reports, <a href="https://mpub.atlassian.net/wiki/spaces/FPS/pages/117244158/UMP+EBC+Usage+Statistics+FAQ" target="_blank">please visit our FAQ</a>.</p>
 <div class="col-md-12"><hr/></div>
 <h2>Platform Master Report (PR)</h2>
 <%= render 'counter_reports/without_customer_id/master_view/form', report_id: 'pr' %>
