--- a/app/views/counter_reports/without_customer_id/standard_view/_form.html.erb
+++ b/app/views/counter_reports/without_customer_id/standard_view/_form.html.erb
@@ -1,26 +1,27 @@
 <form action=<%= counter_report_path(id: report_id) %> method="show">
-<div class="row">
-  <div class="col-sm-2 form-group">
-    <label for="institution">Institution</label>
-    <%= select_tag(:institution, options_for_select(@institutions.map { |i| [i.name, i.identifier] }), class: 'form-control') %>
+  <input type=hidden name=counter_5_report value=true />
+  <div class="row">
+    <div class="col-sm-2 form-group">
+      <label for="institution">Institution</label>
+      <%= select_tag(:institution, options_for_select(@institutions.map { |i| [i.name, i.identifier] }), class: 'form-control') %>
+    </div>
+    <div class="col-sm-2 form-group">
+      <label for="press">Platform</label>
+      <%= select_tag(:press, options_for_select(@presses.map { |p| [p.name, p.id] }), class: 'form-control') %>
+    </div>
+    <div class="col-sm-2 form-group">
+      <label for="start_date">Start</label>
+      <input type="text" name="start_date" aria-label="Start date in yyyy-mm-dd format" class="counter-start-date form-control" />
+    </div>
+    <div class="col-sm-2 form-group">
+      <label for="end_date">End</label>
+      <input type="text" name="end_date" aria-label="End date in yyyy-mm-dd format" class="counter-end-date form-control" />
+    </div>
+    <div class="col-sm-2 form-group" style="margin-top: 2em;">
+      <% unless report_id == 'counter4_br2' %>
+      <button type="submit" class="btn btn-primary">View</button>
+      <% end %>
+      <button type="submit" class="btn btn-primary" name="csv">CSV</button>
+    </div>
   </div>
-  <div class="col-sm-2 form-group">
-    <label for="press">Platform</label>
-    <%= select_tag(:press, options_for_select(@presses.map { |p| [p.name, p.id] }), class: 'form-control') %>
-  </div>
-  <div class="col-sm-2 form-group">
-    <label for="start_date">Start</label>
-    <input type="text" name="start_date" aria-label="Start date in yyyy-mm-dd format" class="counter-start-date form-control" />
-  </div>
-  <div class="col-sm-2 form-group">
-    <label for="end_date">End</label>
-    <input type="text" name="end_date" aria-label="End date in yyyy-mm-dd format" class="counter-end-date form-control" />
-  </div>
-  <div class="col-sm-2 form-group" style="margin-top: 2em;">
-    <% unless report_id == 'counter4_br2' %>
-    <button type="submit" class="btn btn-primary">View</button>
-    <% end %>
-    <button type="submit" class="btn btn-primary" name="csv">CSV</button>
-  </div>
-</div>
 </form>
