HELIO-4177 Investigate Hotjar on Fulcrum

--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -20,6 +20,8 @@
     })(window,document,'script','dataLayer','GTM-PTZXSV7');</script>
     <% end %>
 
+    <!-- hotjar -->
+    <%= render 'shared/hotjar' %>
 
     <!-- Favicons and theme colors -->
     <%= render 'shared/favicon' %>
