--- a/app/views/layouts/csb_too_viewer.html.erb
+++ b/app/views/layouts/csb_too_viewer.html.erb
@@ -20,6 +20,9 @@
     })(window,document,'script','dataLayer','GTM-PTZXSV7');</script>
     <% end %>
 
+    <!-- hotjar -->
+    <%= render 'shared/hotjar' %>
+
     <!-- Favicons and theme colors -->
     <%= render 'shared/favicon' %>
     <meta name="format-detection" content="telephone=no">
