--- a/app/views/layouts/mozilla-pdf-viewer.html.erb
+++ b/app/views/layouts/mozilla-pdf-viewer.html.erb
@@ -11,6 +11,9 @@
     })(window,document,'script','dataLayer','GTM-PTZXSV7');</script>
     <% end %>
 
+    <!-- hotjar -->
+    <%= render 'shared/hotjar' %>
+
     <!-- Citation metadata for Google Scholar -->
     <%= render 'shared/metadata' %>
 
