--- a/app/views/shared/_hotjar.html.erb
+++ b/app/views/shared/_hotjar.html.erb
@@ -1,14 +1,31 @@
 <% if (Settings.host == "www.fulcrum.org") && (controller.current_institutions.map(&:identifier) & ["490", "2405", "2334", "2402"]).empty? %>
 <!-- Hotjar Tracking Code for https://fulcrum.org -->
 <script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2863753,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  // Wait until the cookie is set via user interaction
+  // and only then add hotjar.
+  (async() => {
+    while(!Cookies.get('um_cookie_consent'))
+      await new Promise(resolve => setTimeout(resolve, 1000));
+    setup_hotjar();
+  })();
+
+  function setup_hotjar() {
+
+    var allow_cookies = Cookies.get('um_cookie_consent') || 'na';
+
+    if (allow_cookies !== 'deny' || allow_cookies !== 'dismiss') {
+
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:2863753,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+
+    }
+  }
 </script>
 
 <% end %>
@@ -16,13 +33,30 @@
 <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
 <!-- Hotjar Tracking Code for https://heliotrope-preview.hydra.lib.umich.edu/ -->
 <script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2858980,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  // Wait until the cookie is set via user interaction
+  // and only then add hotjar.
+  (async() => {
+    while(!Cookies.get('um_cookie_consent'))
+      await new Promise(resolve => setTimeout(resolve, 1000));
+    setup_hotjar();
+  })();
+
+  function setup_hotjar() {
+
+    var allow_cookies = Cookies.get('um_cookie_consent') || 'na';
+
+    if (allow_cookies !== 'deny' || allow_cookies !== 'dismiss') {
+
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:2858980,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+
+    }
+  }
 </script>
 <% end %>
